--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
 
     <name>osm-proxy</name>
     
+    <scm>
+        <developerConnection>scm:git:https://github.com/jomu78/osm-proxy</developerConnection>
+        <tag>HEAD</tag>
+    </scm>      
+    
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -85,6 +90,14 @@
                     <webResources>
                     </webResources>
                 </configuration>                    
+            </plugin>  
+            
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
             </plugin>  
         </plugins>
         
