--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>de.muehlencord</groupId>
     <artifactId>osm-proxy</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.5</version>
     <packaging>war</packaging>
 
     <name>osm-proxy</name>
@@ -18,7 +18,7 @@
         <connection>scm:git:https://github.com/jomu78/osm-proxy</connection>
         <developerConnection>scm:git:https://github.com/jomu78/osm-proxy</developerConnection>
         <url>http://github.com/simpligility/ossrh-demo/tree/master</url>
-        <tag>HEAD</tag>
+        <tag>v1.0.5</tag>
     </scm>    
     
     <ciManagement>
